--- a/views/home/index.html
+++ b/views/home/index.html
@@ -17,15 +17,9 @@
             margin: 0px;
             padding: 10px;
         }
-        #ckecked{
+        #checked{
             border:1px solid red;
         }
-        /* .layui-form-label {
-            line-height: 53px;
-        }
-        .layui-input-block {
-            line-height: 53px;
-        } */
     </style>
 </head>
 
@@ -86,21 +80,32 @@
         </div>
     </div>
     <script type="text/html" id="formTpl">
-        <div class="layui-row">
+        <!-- <div class="layui-row"> -->
         {{# layui.each(d, function(index, item){ }}
-        <div class="layui-col-md12 viewInput" index="{{index}}" data-method="config">
+        <div class="layui-row viewInput" index="{{index}}" data-method="config">
+        <div class="layui-col-md10 " >
             {{# if(item.type == 1){ }}
                 <div class="layui-form-item">
-                    <label class="layui-form-label">{{item.name == ''?'输入框':item.name}}</label>
+                    <label class="layui-form-label">
+                        {{# if(item.required){ }}
+                            <span style="color:red">*</span>
+                        {{# } }}
+                        <span>{{item.name == ''?'输入框':item.name}}</span>
+                    </label>
                     <div class="layui-input-block">
-                        <input type="text" name="{{item.field}}" {{item.required?"required lay-verify='required'":""}}  placeholder="{{item.placeholder}}" autocomplete="off" class="layui-input">
+                        <input type="text" name="{{index}}" {{item.required?"required lay-verify='required'":""}}  placeholder="{{item.placeholder}}" autocomplete="off" class="layui-input">
                     </div>
                 </div>
             {{# }else if(item.type == 2){ }}
                 <div class="layui-form-item ">
-                    <label class="layui-form-label">{{item.name == ''?'选择框':item.name}}</label>
+                    <label class="layui-form-label">
+                        {{# if(item.required){ }}
+                            <span style="color:red">*</span>
+                        {{# } }}
+                        <span>{{item.name == ''?'选择框':item.name}}</span>
+                    </label>
                     <div class="layui-input-block">
-                        <select name="{{item.field}}" {{item.required?"required lay-verify='required'":""}} class="select">
+                        <select name="{{index}}" {{item.required?"required lay-verify='required'":""}}>
                             <option value="">{{item.placeholder}}</option>
                             {{# layui.each(item.option, function(i, o){ }}
                             {{# console.log(o) }}
@@ -114,7 +119,7 @@
                     <label class="layui-form-label">{{item.name == ''?'复选框':item.name}}</label>
                     <div class="layui-input-block">
                         {{# layui.each(item.option, function(i, o){ }}
-                            <input type="checkbox" name="" title="{{o}}" lay-skin="primary" >
+                            <input type="checkbox" name="{{index}}[]" title="{{o}}" lay-skin="primary" >
                         {{# }) }}
                     </div>
                 </div>
@@ -123,21 +128,35 @@
                     <label class="layui-form-label">{{item.name == ''?'单选框':item.name}}</label>
                     <div class="layui-input-block">
                         {{# layui.each(item.option, function(i, o){ }}
-                            <input type="radio" name="index" value="{{o}}" title="{{o}}">
+                            <input type="radio" name="{{index}}" value="{{o}}" title="{{o}}">
                         {{# }) }}
                     </div>
                 </div>
             {{# }else if(item.type == 5){ }}
                 <div class="layui-form-item layui-form-text">
-                    <label class="layui-form-label">{{item.name == ''?'文本域':item.name}}</label>
+                    <label class="layui-form-label">
+                        {{# if(item.required){ }}
+                            <span style="color:red">*</span>
+                        {{# } }}
+                        <span>{{item.name == ''?'文本域':item.name}}</span>
+                        
+                    </label>
                     <div class="layui-input-block">
-                        <textarea name="{{item.field}}" placeholder="{{item.placeholder}}" {{item.required?"required lay-verify='required'":""}} class="layui-textarea"></textarea>
+                        <textarea name="{{index}}" placeholder="{{item.placeholder}}" {{item.required?"required lay-verify='required'":""}} class="layui-textarea"></textarea>
                     </div>
                 </div>
             {{# } }}
         </div>
+        <div class="layui-col-md2" style="height:38px;line-height:38px;">
+            <button class="layui-btn layui-btn-danger layui-btn-sm" type="button" data-method="del" index="{{index}}">删除</button>
+        </div>
+    </div>
         {{# }) }}
-    
+        <div class="layui-form-item">
+            <div class="layui-input-block">
+              <button class="layui-btn" lay-submit lay-filter="formDemo">立即提交</button>
+            </div>
+          </div>
     </div>
     </script>
 
@@ -243,7 +262,7 @@
                             str.push({
                                 type: 1,
                                 name: "输入框",
-                                required: true,
+                                required: false,
                                 placeholder: "请输入",
                                 soRt: str.length + 1,
                                 field: ""
@@ -265,6 +284,7 @@
                                 type: 3,
                                 name: "复选框",
                                 option: new Array(),
+                                required: false,
                                 soRt: str.length + 1,
                                 field: ""
                             })
@@ -274,6 +294,7 @@
                                 type: 4,
                                 name: "单选框",
                                 option: new Array(),
+                                required: false,
                                 soRt: str.length + 1,
                                 field: ""
                             })
@@ -304,9 +325,10 @@
                     form.render(null,"formView");
                 },
                 config:function(){
-                    $(this).attr("id","ckecked");
+                    $(this).attr("id","checked");
                     $(this).siblings().removeAttr("id");
                     var i = $(this).attr("index");
+                    console.log("双击时获取到的索引"+i)
                     var getTpl = configTpl.innerHTML
                         , view = document.getElementById('configView');
                     laytpl(getTpl).render(str[i], function (html) {
@@ -320,11 +342,18 @@
                 },
                 delete:function(){
                     $(this).parent().remove();
+                },
+                del:function(){
+                    var i = $(this).attr("index");
+                    str.splice(i,1);
+                    active.renderForm();
+                    $("#configView").html("")
+
                 }
             };
 
             form.on("submit(submit)",function(data){
-                var i = $("#ckecked").attr("index");
+                var i = $("#checked").attr("index");
                 var d = data.field;
                 var inputStr = new Array();
                 for(var key in d){
@@ -334,11 +363,15 @@
                         str[i][key] = d[key];
                     }
                 };
-
+                if(d.required){
+                    d.required = true;
+                }else{
+                    d.required = false;
+                }
                 if(inputStr.length != 0){
                     str[i].option = inputStr;
                 }
-                console.log(d)
+               
                 layer.msg("保存成功",{
                     icon:1,
                     time:1000
@@ -349,9 +382,14 @@
                     laytpl(getTpl).render(str[i], function (html) {
                         view.innerHTML = html;
                     });
-                    form.render();
-                    $('[index=' + i +']').attr("id","ckecked");
+                    form.render(null,"configView");
+                    $("#formView").children().eq(i).attr("id","checked")
+                    
                 })
+                return false;
+            });
+            form.on("submit(formDemo)",function(data){
+                console.log(data.field)
                 return false;
             })
 
@@ -369,7 +407,12 @@
                 $(this).css("background-color", "");
             });
 
-            $("#formView").on("dblclick",".viewInput", function () {
+            $("#formView").on("click",".layui-btn", function () {
+                var othis = $(this), method = othis.data('method');
+                active[method] ? active[method].call(this, othis) : '';
+            });
+
+            $("#formView").on("dblclick",".viewInput,.layui-btn", function () {
                 var othis = $(this), method = othis.data('method');
                 active[method] ? active[method].call(this, othis) : '';
             });
@@ -384,12 +427,6 @@
                 var othis = $(this), method = othis.data('method');
                 active[method] ? active[method].call(this, othis) : '';
             });
-
-            $("#formView").on("click",".select",function(){
-                event.stopPropagation();
-                console.log("aa")
-                return false;
-            })
 
 
         });
